 
                      T h e   B A R T   W i d g e t 

...........................................................................
                                                                 Change Log
This document lists major changes.  All sorts of minor details
change between releases, but you don't really care about them.

v1.06: <<RELEASE DATE HERE>>
----------------------------
 - Updated maps to reflect transfers at 19th St/Oakland

v1.05:  September 13, 2010
--------------------------
 - Schedules and holidays updated.
 - Routing directions changed to reflect northbound transfers at 
   19th St/Oakland (instead of Oakland City Center/12th St).
 - Scripts to generate fares, schedules, and holidays rewritten to use 
   api.bart.gov.


v1.04:  January 14, 2010
------------------------
 - Schedules, maps, fares, and holidays updated.


v1.03:  January 2, 2008
-----------------------
 - Schedules, maps, and fares updated for 2008.

 - v1.02 did not work on Tiger.  That has been fixed.


v1.01:  June 2, 2007
--------------------
 - Leopard compatibility.


v1.0:  November 2, 2005  except it somehow ended up February 22, 2007 to my eternal shame etc.
-----------------------
 - Click the speaker button for voice announcements on the 
   currently-displayed route.

 - The trip area automatically scales horizontally, so long trips
   don't run off the end of the widget.
   
 - The time/date bar stays in sync when you drag or scroll the
   trip area.
   
 - Map baubles shrink when you drag them, so it's easier to see
   the map.

 - Fares and holiday schedules are updated.  Profuse thanks to
   Michael Andersen, Annie Madej, and Jeff Baker for updating
   the fare tables for me.


v0.94:  September 13, 2005
--------------------------
 - The widget has been updated to reflect BART's new schedule.

 - Let voice announcements guide you to and from work every day.
   Click the "speaker" button next to a bookmark, and then click
   the words in red to change them.

